--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=doangamifi
+DB_PORT=3307
+DB_DATABASE=trochoibaitap
 DB_USERNAME=root
 DB_PASSWORD=
 
